force-app/src/objects/CTCM__payment__c.object
<CustomObject>
    <fields>
        <fullName>CTCM__Bank_Statement_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement Line Item</label>
        <referenceTo>c2g__codaBankStatementLineItem__c</referenceTo>
        <relationshipLabel>payment</relationshipLabel>
        <relationshipName>payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>payment</relationshipLabel>
        <relationshipName>payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>payment</relationshipLabel>
        <relationshipName>payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__message__c</fullName>
        <label>message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__payed_amount__c</fullName>
        <label>paid amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>payment</label>
    <nameField>
        <displayFormat>p{0000000}</displayFormat>
        <label>payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>